[package]
name = "daytona-sdk"
version = "0.1.0"
edition = "2021"
description = "Daytona SDK for Rust"
license = "Apache-2.0"

[dependencies]
daytona-api-client = { path = "../api-client-rust" }
daytona-toolbox-client = { path = "../toolbox-api-client-rust" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tokio-tungstenite = "0.26"
reqwest-middleware = { version = "0.4", features = ["json", "multipart"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
